1998-04-09  Irene Lee  <lee@wijiji.santafe.edu>

	* Averager.m, EZBin.m, EZDistribution.m, EZGraph.m, Entropy.m:
	Add documentation strings.

1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZGraph.m: Don't include collections.h.  Include simtoolsgui.h.
	Reformatting throughout.

	* EZDistribution.m ([EZDistribution -createEnd]): Include misc.h.
	Use xmalloc instead of malloc.

	* EZBin.m: Don't include collections.h or gui.h.  Include misc.h.
	([EZBin -createEnd]): Use xmalloc for distribution, cachedLimits,
	and locations.

	* EZBin.h: Include simtoolsgui/GUIComposite.h, not
	simtools/GUIComposite.h.

	* Averager.h: Reformatting throughout.

1998-02-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Averager.m: Reformatting throughout.
	([Averager -update]): Don't call updateMethodCache:.

	* Entropy.m: Likewise.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZGraph.m ([EZGraph -createEnd]): Use Graph instead of BLTGraph.

1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZGraph.m: Minor reformatting.
	([EZGraph -createEnd]): Use renamed methods setTitle and
	setAxisLabelsX:Y:.

	* EZDistribution.m: Include gui.h instead of tkobjc.h and
	tkobjc/control.h.  Use renamed drawHistogramWithDouble:atLocations:.

	* EZDistribution.h: Reformatting throughout.

	* EZBin.m: Include gui.h instead of tkobjc.h and tkobjc/control.h.
	([EZBin -createEnd]): Use Histogram instead of Histo.  Use renamed
	method setAxisLabelsX:Y: and setTitle:.  Use new methods
	setBarWidth:, setXaxisMin:, setupZoomStack, hideLegend,
	setupActiveOutlierMarker, and setupActiveItemInfo instead of 
	tkobjc_* frobbing.
	([EZBin -output]): Use renamed drawHistogramWithInt:atLocations:.

	* EZBin.h: Include gui.h.
	(EZBin): Make aHisto conform to the Histogram protocol.

1998-01-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZGraph.m:  Don't import <tkobjc.h>.

1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZBin.m ([EZBin -createEnd]): Use