@@ -28,27 +28,27 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return obj;
 }
 
-//* The setGraphics method sets the state of the display. Set the state to 0 
-//* if a graphical display of the graph is not required. The default state is 1
-//* meaning that by default the data appears graphically in a window. 
+//M: The setGraphics method sets the state of the display. Set the state to 0 
+//M: if a graphical display of the graph is not required. The default state is 1
+//M: meaning that by default the data appears graphically in a window. 
 - setGraphics: (int)state
 {
   graphics = state;
   return self;
 }
 
-//* The setFileOutput method sets the state of file I/O.  Set the state to 1 
-//* if data for the sequences is to be sent to a file.  The default state is 0
-//* meaning that by default no file I/O is carried out by the EZGraph class.
+//M: The setFileOutput method sets the state of file I/O.  Set the state to 1 
+//M: if data for the sequences is to be sent to a file.  The default state is 0
+//M: meaning that by default no file I/O is carried out by the EZGraph class.
 - setFileOutput: (int)state
 {
   fileOutput = state;
   return self;
 }
 
-//* The setAxisLabels:X:Y method sets the horizontal and vertical labels on 
-//* the histogram in the graphical version of EZGraph. (Only relevant if the 
-//* state of setGraphics is set to 1.)
+//M: The setAxisLabels:X:Y method sets the horizontal and vertical labels on 
+//M: the histogram in the graphical version of EZGraph. (Only relevant if the 
+//M: state of setGraphics is set to 1.)
 - setAxisLabelsX: (const char *)xl Y:(const char *)yl
 { 
   xLabel = xl;
@@ -56,9 +56,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
-//* The setTitle method uses a title string to label a graph window in the 
-//* graphical version of EZGraph.  The label appears at the top of the graph 
-//* window. (Only relevant if the state of setGraphics is set to 1.)
+//M: The setTitle method uses a title string to label a graph window in the 
+//M: graphical version of EZGraph.  The label appears at the top of the graph 
+//M: window. (Only relevant if the state of setGraphics is set to 1.)
 - setTitle: (const char *)aTitle
 {
   title = aTitle;
@@ -83,8 +83,8 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
-//* The getGraph method lets the user access the graph generated internally
-//* by the EZGraph. (Only relevant if the state of setGraphics is set to 1.)
+//M: The getGraph method lets the user access the graph generated internally
+//M: by the EZGraph. (Only relevant if the state of setGraphics is set to 1.)
 - getGraph
 {
   return theGraph;
@@ -135,11 +135,11 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
-//* The createSequence method creates a sequence in the EZGraph based on
-//* the return value provided by the object anObj when sent the selector
-//* aSel.  If file I/O is enabled, then the data will be sent to a file with
-//* the name aName, otherwise the aName argument is simply used as the
-//* legend for the graph element generated by EZGraph.
+//M: The createSequence method creates a sequence in the EZGraph based on
+//M: the return value provided by the object anObj when sent the selector
+//M: aSel.  If file I/O is enabled, then the data will be sent to a file with
+//M: the name aName, otherwise the aName argument is simply used as the
+//M: legend for the graph element generated by EZGraph.
 - createSequence: (const char *)aName
     withFeedFrom: anObj 
      andSelector: (SEL)aSel
@@ -154,9 +154,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
-//* The createAverageSequence method takes a collection of objects and 
-//* generates a sequence based on the average over the responses of the
-//* entire object set (as opposed to a single object as in createSequence)
+//M: The createAverageSequence method takes a collection of objects and 
+//M: generates a sequence based on the average over the responses of the
+//M: entire object set (as opposed to a single object as in createSequence)
 - createAverageSequence: (const char *)aName 
            withFeedFrom: aCollection 
             andSelector: (SEL)aSel
@@ -180,9 +180,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
-//* The createTotalSequence method takes a collection of objects and 
-//* generates a sequence based on the sum over the responses of the
-//* entire object set (as opposed to a single object as in createSequence)
+//M: The createTotalSequence method takes a collection of objects and 
+//M: generates a sequence based on the sum over the responses of the
+//M: entire object set (as opposed to a single object as in createSequence)
 - createTotalSequence: (const char *)aName
          withFeedFrom: aCollection 
           andSelector: (SEL)aSel
@@ -206,9 +206,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
   return self;
 }
 
-//* The createMinSequence method takes a collection of objects and 
-//* generates a sequence based on the minimum over the responses of the
-//* entire object set (as opposed to a single object as in createSequence)
+//M: The createMinSequence method takes a collection of objects and 
+//M: generates a sequence based on the minimum over the responses of the
+//M: entire object set (as opposed to a single object as in createSequence)
 - createMinSequence: (const char *)aName 
        withFeedFrom: aCollection 
         andSelector: (SEL)aSel
@@ -233,9 +233,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
 
 }
 
-//* The createMaxSequence method takes a collection of objects and 
-//* generates a sequence based on the maximums over the responses of the
-//* entire object set (as opposed to a single object as in createSequence)
+//M: The createMaxSequence method takes a collection of objects and 
+//M: generates a sequence based on the maximums over the responses of the
+//M: entire object set (as opposed to a single object as in createSequence)
 - createMaxSequence: (const char *)aName
        withFeedFrom: aCollection 
         andSelector: (SEL)aSel
@@ -260,9 +260,9 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
 
 }
 
-//* The createCountSequence method takes a collection of objects and 
-//* generates a sequence based on the count over the responses of the
-//* entire object set (as opposed to a single object as in createSequence)
+//M: The createCountSequence method takes a collection of objects and 
+//M: generates a sequence based on the count over the responses of the
+//M: entire object set (as opposed to a single object as in createSequence)
 - createCountSequence: (const char *)aName
          withFeedFrom: aCollection 
           andSelector: (SEL) aSel
@@ -288,8 +288,8 @@ const char graphColors[NUMCOLORS][16] = { "Red", "Green", "Yellow",
 
 }
 
-//* The step method lets the user accest the graph generated internally by
-//* EZGraph. (Only relevant if the state of setGraphics is set to 1.)
+//M: The step method lets the user accest the graph generated internally by
+//M: EZGraph. (Only relevant if the state of setGraphics is set to 1.)
 - step
 {
   [sequenceList forEach: M(step)];
